Closed
Bug 1548565
Opened 6 years ago
Closed 6 years ago
Crash in [@ XPCJSContext::InterruptCallback]
Categories
(GeckoView :: General, defect)
Tracking
(firefox-esr60 unaffected, firefox66 unaffected, firefox67 unaffected, firefox68 fixed)
RESOLVED
FIXED
mozilla68
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | fixed |
People
(Reporter: calixte, Assigned: squib)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-7a258d4e-9283-454f-9dbf-0304d0190502.
Top 10 frames of crashing thread:
0 xul.dll static bool XPCJSContext::InterruptCallback js/xpconnect/src/XPCJSContext.cpp:673
1 xul.dll JSContext::handleInterrupt js/src/vm/Runtime.cpp:515
2 xul.dll static bool Interpret js/src/vm/Interpreter.cpp
3 xul.dll js::RunScript js/src/vm/Interpreter.cpp:423
4 xul.dll js::ExecuteKernel js/src/vm/Interpreter.cpp:782
5 xul.dll js::Execute js/src/vm/Interpreter.cpp:815
6 xul.dll JS::CloneAndExecuteScript js/src/vm/CompilationAndEvaluation.cpp:496
7 xul.dll mozilla::dom::PrecompiledScript::ExecuteInGlobal js/xpconnect/loader/ChromeScriptLoader.cpp:300
8 xul.dll static bool mozilla::dom::PrecompiledScript_Binding::executeInGlobal dom/bindings/PrecompiledScriptBinding.cpp:46
9 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3153
There are 3 crashes (from 3 installations) in nightly 68 with buildid 20190501215533. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1493225.
[1] https://hg.mozilla.org/mozilla-central/rev?node=5c3bff8f45d6
Flags: needinfo?(jporter+bmo)
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Comment 2•6 years ago
|
||
This fix is speculative, since I never encountered this crash and don't know how to reproduce it, but based on the crash stack, it should hopefully do the trick.
Assignee: nobody → jporter+bmo
Status: NEW → ASSIGNED
Flags: needinfo?(jporter+bmo)
Pushed by jporter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/216f1bef7c4b
Fix crash in XPCJSContext::InterruptCallback from bug 1493225; r=smaug
Comment 4•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in
before you can comment on or make changes to this bug.
Description
•