Bug 1548565 - Fix crash in XPCJSContext::InterruptCallback from bug 1493225; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D29710

--HG--
extra : moz-landing-system : lando